--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pinterest Clone</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>InterestSphere Gender Selection</title>
+  <link rel="stylesheet" href="gender.css">
 </head>
 <body>
-    <header>
-        <h1>Pinterest Clone</h1>
-        <input type="text" id="search" placeholder="Search for pins...">
-    </header>
-    <main>
-        <div id="grid-container"></div>
-        <div id="loading" class="hidden">Loading...</div>
-    </main>
-    <footer>
-        <p>© 2024 Pinterest Clone</p>
-    </footer>
-    <script src="script.js"></script>
+  <div class="modal">
+    <div class="modal-content">
+      <div class="progress-indicator">
+        <div class="dot active"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+      <h2>What's your gender?</h2>
+      <p>
+        This helps us find you more relevant content. We won’t show it on your profile.
+      </p>
+      <form id="gender-form">
+        <label>
+          <input type="radio" name="gender" value="female"> Female
+        </label>
+        <label>
+          <input type="radio" name="gender" value="male"> Male
+        </label>
+        <label>
+          <input type="radio" name="gender" value="other"> Specify another
+        </label>
+        <button type="submit" class="next-button">Next</button>
+      </form>
+    </div>
+  </div>
+  <script src="gender.js"></script>
 </body>
 </html>
